--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "dependencies": {
     "gatsby": "^2.24.11",
+    "gatsby-image": "^2.4.13",
+    "gatsby-plugin-sharp": "^2.6.22",
+    "gatsby-source-filesystem": "^2.3.23",
+    "gatsby-transformer-sharp": "^2.5.11",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
